--- a/frontend/queue-management.html
+++ b/frontend/queue-management.html
@@ -12,7 +12,7 @@
     ></script>
     <script type="text/javascript">
         (function () {
-            emailjs.init("jj0Su_cpamOsao4Dl"); // Replace with your EmailJS user ID
+            emailjs.init("_3-17_pX9sbhDPRK0"); // Replace with your EmailJS user ID
         })();
     </script>
     <script>
@@ -131,8 +131,8 @@
             console.log("Message:", message);
             try {
                 const response = await emailjs.send(
-                    "service_mffe2pa",    // Replace with your EmailJS service ID
-                    "template_3q3hy0q",   // Replace with your EmailJS template ID
+                    "service_ectj92j",    // Replace with your EmailJS service ID
+                    "template_on7sfyq",   // Replace with your EmailJS template ID
                     {
                         to_email: toEmail,
                         name: firstName,
