--- a/frontend/admin-dashboard.html
+++ b/frontend/admin-dashboard.html
@@ -4,17 +4,49 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin Dashboard | QueueEase</title>
-  <link rel="stylesheet" href="css/styles.css">
+  
+  <!-- Google Font: Poppins -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Font Awesome for icons -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
+  <!-- Custom Stylesheet -->
+  <link rel="stylesheet" href="css/admin-dashboard.css">
 </head>
 <body>
-  <header>
-    <h1>Admin Dashboard</h1>
-  </header>
-  <nav>
-    <a href="user-management.html">Manage Users</a>
-    <a href="queue-management.html">Manage Queue</a>
-    <a href="notifications.html">Send Notifications</a>
-    <a href="index.html">Logout</a>
+  <!-- Navigation Bar -->
+  <nav class="navbar navbar-expand-lg navbar-dark px-4">
+    <a class="navbar-brand" href="#">QueueEase</a>
+    <div class="collapse navbar-collapse">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="user-management.html">Manage Users</a></li>
+        <li class="nav-item"><a class="nav-link" href="queue-management.html">Manage Queue</a></li>
+        <li class="nav-item"><a class="nav-link" href="notifications.html">Send Notifications</a></li>
+        <li class="nav-item">
+          <a href="index.html" class="logout-btn"><i class="fas fa-sign-out-alt"></i></a>
+        </li>
+      </ul>
+    </div>
   </nav>
+
+  <!-- Welcoming Message -->
+  <div style="padding-left: 30px; margin-top: 180px; max-width: 100%; width: 650px;">
+    <h3 style="color: #12372A; font-weight: 600; font-size: 50px;">Welcome Admin!</h3>
+    <p style="color: #12372A; font-size: 20px; line-height: 1.6;">
+      We're thrilled to have you onboard! As an admin, you're responsible for managing users, queues, and notifications. If you require assistance, don't hesitate to reach out. Wishing you a productive and enjoyable day ahead!
+    </p>
+  </div>
+
+  <!-- Footer -->
+  <footer class="footer mt-5">
+    2024 QueueEase. All rights reserved.
+  </footer>
+
+  <!-- Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
