--- a/frontend/user-dashboard.html
+++ b/frontend/user-dashboard.html
@@ -1,3 +1,4 @@
+<!-- user-dashboard.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,7 +14,39 @@
   <nav>
     <a href="user-queue.html">Queue</a>
     <a href="user-notifications.html">Notifications</a>
-    <a href="index.html">Logout</a>
+    <a href="#" onclick="logout()">Logout</a>
   </nav>
+
+  <main>
+    <p id="userInfo"></p>
+    <!-- Other content can go here -->
+  </main>
+
+  <!-- Include scripts -->
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="js/scripts.js"></script>
+  <script>
+    function displayUserInfo() {
+      const firstName = localStorage.getItem('first_name');
+      const lastName = localStorage.getItem('last_name');
+      const userId = localStorage.getItem('id');
+
+      if (firstName && lastName && userId) {
+        const userInfoElement = document.getElementById('userInfo');
+        if (userInfoElement) {
+          userInfoElement.textContent = `Welcome, ${firstName} ${lastName}! ID: ${userId}`;
+        }
+      }
+    }
+
+    document.addEventListener('DOMContentLoaded', () => {
+      displayUserInfo();
+
+      // Auto-refresh every 5 seconds
+      setInterval(() => {
+        displayUserInfo();
+      }, 1000);
+    });
+  </script>
 </body>
 </html>
